--- a/exclusive-offers.html
+++ b/exclusive-offers.html
@@ -13,6 +13,7 @@
   crossorigin="anonymous"
 />
 
+<!-- My CSS -->
 <link rel="stylesheet" href="./public/styles/b-ext-style.css">
 </head>
 <body>
@@ -78,7 +79,7 @@
     <div class="row p-4 d-flex justify-content-center align-items-center">
       <a href="#" class="btn btn-primary rounded mx-4 w-25">View All Offers</a>
     </div>
-    <div class="row"></div>
+   
   </section>
   
   <!-- Bootstrap JS -->
