--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Header</title>
 
-    <!-- Bootstrap CDN -->
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,189 +13,187 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./public/styles/b-ext-style.css">
+    <!-- Bootstrap Datepicker CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+    />
+
+    <link rel="stylesheet" href="./public/styles/b-ext-style.css" />
   </head>
   <body>
     <section id="header">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+      <div class="row d-flex justify-content-center align-items-center my-4">
+        <ul class="nav d-flex justify-content-center align-items-center">
           <a class="navbar-brand" href="#"
             ><img id="logo" src="./public/images/emt_logo.svg" alt=""
           /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <div>
-                <div class=".row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <div class="row"></div>
-                </div>
-              </div>
-              <div>
-                <div class="row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </div>
-                <div class="row"></div>
-              </div>
-              <div>
-                <div class="row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </div>
-                <div class="row"></div>
-              </div>
-              <div>
-                <div class="row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </div>
-                <div class="row"></div>
-              </div>
-              <div>
-                <div class="row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </div>
-                <div class="row"></div>
-              </div>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/flights.html"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth flightmenuico"></span
+              ><span>Flights</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/hotels/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth hotelmenuico"></span><span>Hotels</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://fph.easemytrip.com/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth fphmenuico"></span
+              ><span>Flight + Hotel</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/railways/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth trainmenuico"></span><span>Trains</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/bus/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth busmenuico"></span><span>Bus</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/holidays/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth holidaymenuico"></span
+              ><span>Holidays</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/cabs/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth cabmenuico"></span><span>Cabs</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="https://www.easemytrip.com/activities/"
+              class="_actvrmenu d-flex justify-content-center align-items-center"
+            >
+              <span class="meuicowidth actvitymenuico"></span
+              ><span>Activities</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="row d-flex justify-content-center align-items-center my-4">
+        <div class="d-flex flex-wrap justify-content-center align-items-start p-0">
+          <div>
+            <p>FROM</p>
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle w-100"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Delhi
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div>
+            <p>TO</p>
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle w-100"
+                type="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Mumbai
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </div>
+          </div>
 
-              <div class="col d-flex flex-column justify-content-center align-items-center">
-
-                <ul class="navbar-nav
-
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Drop
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li>
-                        <a class="dropdown-item" href="#">Another action</a>
-                      </li>
-                      <li><hr class="dropdown-divider" /></li>
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Drop
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li>
-                        <a class="dropdown-item" href="#">Another action</a>
-                      </li>
-                      <li><hr class="dropdown-divider" /></li>
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-
-                </ul>
-
-                <div class="row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </div>
-              </div>
-
-            </ul>
+          <div id="datepickerParent1">
+            <p>DEPARTURE DATE</p>
+            <input class="w-100" type="text" id="datepicker1" readonly>
+          </div>
+          <div id="datepickerParent2">
+            <p>RETURN DATE</p>
+            <input class="w-100" type="text" id="datepicker2" readonly>
+          </div>
+          <div>
+            <p>TRAVELLERS</p>
+            <input class="w-100" type="text">
+          </div>
+          <div class="d-flex flex-column justify-content-center align-items-center">
+            <button type="button" class="btn btn-primary">SEARCH</button>
           </div>
         </div>
-      </nav>
-      <div class="row d-flex justify-content-center align-items-center">
-        <ul class="nav d-flex justify-content-center align-items-center">
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/flights.html" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth flightmenuico"></span><span>Flights</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/hotels/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth hotelmenuico"></span><span>Hotels</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://fph.easemytrip.com/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth fphmenuico"></span><span>Flight + Hotel</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/railways/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth trainmenuico"></span><span>Trains</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/bus/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth busmenuico"></span><span>Bus</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/holidays/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth holidaymenuico"></span><span>Holidays</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/cabs/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth cabmenuico"></span><span>Cabs</span>
-          </a>
-          </li>
-          <li class="nav-item">
-            <a href="https://www.easemytrip.com/activities/" class="_actvrmenu d-flex justify-content-center align-items-center">
-              <span class="meuicowidth actvitymenuico"></span><span>Activities</span>
-          </a>
-          </li>
-
-          <li class="nav-item">
-            <a class="_actvrmenu d-flex justify-content-center align-items-center"><span class="meuicowidth moremenuico"></span><span>More</span></a>
-          </li>
-          
-        </ul>
       </div>
     </section>
 
     <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- jQuery JS -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
+
+    <!-- Bootstrap Datepicker JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+    <script>
+      // Initialize datepicker when parent div is clicked
+      $(document).ready(function () {
+        $("#datepickerParent1").click(function () {
+          $("#datepicker1")
+            .datepicker({
+              format: "dd/mm/yyyy",
+            })
+            .datepicker("show");
+        });
+      });
+
+      $(document).ready(function () {
+        $("#datepickerParent2").click(function () {
+          $("#datepicker2")
+            .datepicker({
+              format: "dd/mm/yyyy",
+            })
+            .datepicker("show");
+        });
+      });
+    </script>
   </body>
 </html>
