--- a/header.html
+++ b/header.html
@@ -23,11 +23,12 @@
   </head>
   <body>
     <section id="header">
-      <div class="row d-flex justify-content-center align-items-center my-4">
-        <ul class="nav d-flex justify-content-center align-items-center">
-          <a class="navbar-brand" href="#"
+      <div class="row d-flex justify-content-evenly align-items-center my-4">
+        <a href="#"
             ><img id="logo" src="./public/images/emt_logo.svg" alt=""
           /></a>
+        <ul class="nav d-flex justify-content-center align-items-center">
+          
           <li class="nav-item">
             <a
               href="https://www.easemytrip.com/flights.html"
@@ -99,7 +100,7 @@
         </ul>
       </div>
       <div class="row d-flex justify-content-center align-items-center my-4">
-        <div class="d-flex flex-wrap justify-content-center align-items-start p-0">
+        <div class="d-flex flex-wrap">
           <div>
             <p>FROM</p>
             <div class="dropdown">
@@ -153,8 +154,8 @@
             <p>TRAVELLERS</p>
             <input class="w-100" type="text">
           </div>
-          <div class="d-flex flex-column justify-content-center align-items-center">
-            <button type="button" class="btn btn-primary">SEARCH</button>
+          <div>
+            <button type="button" class="btn btn-primary btn-block rounded-0">SEARCH</button>
           </div>
         </div>
       </div>
