--- a/header.html
+++ b/header.html
@@ -113,10 +113,31 @@
                 Delhi
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Bengaluru</a></li>
+                <li><a class="dropdown-item" href="#">Mumbai</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Kolkata</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Goa</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Hyderabad</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Chennai</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Singapore</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Dubai</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Bangkok</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Kathmandu</a>
                 </li>
               </ul>
             </div>
@@ -133,10 +154,32 @@
                 Mumbai
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Delhi</a></li>
+                <li><a class="dropdown-item" href="#">Bengaluru</a></li>
+              
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Kolkata</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Goa</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Hyderabad</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Chennai</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Singapore</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Dubai</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Bangkok</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Kathmandu</a>
                 </li>
               </ul>
             </div>
