--- a/footer.html
+++ b/footer.html
@@ -13,8 +13,14 @@
       crossorigin="anonymous"
     />
 
-     <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font Awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- My CSS -->
     <link rel="stylesheet" href="./public/styles/b-ext-style.css" />
@@ -23,7 +29,7 @@
     <footer>
       <div class="row">
         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-          <div class="list-group mt-3 ms-5" id="list-tab" role="tablist">
+          <div class="list-group mt-3 mx-3" id="list-tab" role="tablist">
             <button
               class="list-group-item list-group-item-action active"
               id="list-our-offerings-list"
@@ -116,7 +122,8 @@
             </button>
             <button
               class="list-group-item list-group-item-action"
-              id="list-investors-list" data-bs-toggle="list"
+              id="list-investors-list"
+              data-bs-toggle="list"
               onclick="openInvestorPage()"
               role="tab"
               aria-controls="investors"
@@ -125,12 +132,13 @@
             </button>
             <button
               class="list-group-item list-group-item-action"
-              id="list-current-list" data-bs-toggle="list"
+              id="list-current-list"
+              data-bs-toggle="list"
               onclick="openCurrentPage()"
               role="tab"
               aria-controls="current"
             >
-            CURRENT OPENINGS
+              CURRENT OPENINGS
             </button>
           </div>
         </div>
@@ -1419,7 +1427,9 @@
                   <h5>Stay updated about us.</h5>
                 </div>
                 <div class="row mt-3">
-                  <div class="menulinkx2 d-flex justify-content-start align-items-start">
+                  <div
+                    class="menulinkx2 d-flex justify-content-start align-items-start"
+                  >
                     <div class="menulinkx2_cnt">
                       <a
                         href="https://www.easemytrip.com/media.html"
@@ -1429,7 +1439,9 @@
                     </div>
                     <div class="medi_cnt_mn">
                       <div class="medi_cnt">
-                        <div class="mail_bx d-flex justify-content-center align-items-start">
+                        <div
+                          class="mail_bx d-flex justify-content-center align-items-start"
+                        >
                           <i class="fa-regular fa-envelope"></i>
                           <p class="mb-para">
                             <span class="nwHdr">Media Contact</span>
@@ -1456,46 +1468,79 @@
       </div>
       <div class="row mt-4">
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12">
-          <img class="ps-5" src="./public/images/EMTLogo_white.png" alt="" />
-          <p class="pt-2 ps-5">
-            EaseMyTrip offers 'End to End' travel solutions including air
-            tickets for more than 400 international and domestic airlines, hotel
-            bookings for nearly 1 million hotels in India and abroad, cab
-            booking with 4000+ cab operators, bus tickets with 2000+ bus
-            operators, and railway tickets in India for all major cities.
-          </p>
+          <div class="mx-3">
+            <img class="ps-5" src="./public/images/EMTLogo_white.png" alt="" />
+            <p class="pt-2 ps-3">
+              EaseMyTrip offers 'End to End' travel solutions including air
+              tickets for more than 400 international and domestic airlines, hotel
+              bookings for nearly 1 million hotels in India and abroad, cab
+              booking with 4000+ cab operators, bus tickets with 2000+ bus
+              operators, and railway tickets in India for all major cities.
+            </p>
+          </div>
         </div>
         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
-          <div class="logoandmtwht d-flex flex-wrap flex-column justify-content-evenly align-items-start">
-            <div class="hedingemt m-3">Download EaseMyTrip App <span class="nhy"></span></div>
-
-            <div class="appicon ftnew d-flex justify-content-evenly align-items-center">
-                <div class="apiconh m-2"><a href="//play.google.com/store/apps/details?id=com.easemytrip.android" target="_new"><img src="./public/images/android.png" alt="Google Play"></a></div>
-                <div class="apiconh m-2"><a href="https://itunes.apple.com/in/app/easemytrip-flight-booking/id1053030595?mt=8" target="_new"><img src="./public/images/ios.png" alt="App Store"></a></div>
+          <div
+            class="logoandmtwht d-flex flex-wrap flex-column justify-content-evenly align-items-start"
+          >
+            <div class="hedingemt m-3">
+              Download EaseMyTrip App <span class="nhy"></span>
             </div>
 
-
-        </div>
+            <div
+              class="appicon ftnew d-flex justify-content-evenly align-items-center"
+            >
+              <div class="apiconh m-2">
+                <a
+                  href="//play.google.com/store/apps/details?id=com.easemytrip.android"
+                  target="_new"
+                  ><img src="./public/images/android.png" alt="Google Play"
+                /></a>
+              </div>
+              <div class="apiconh m-2">
+                <a
+                  href="https://itunes.apple.com/in/app/easemytrip-flight-booking/id1053030595?mt=8"
+                  target="_new"
+                  ><img src="./public/images/ios.png" alt="App Store"
+                /></a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
-          <div class="logoqrmtwht d-flex flex-wrap flex-column justify-content-evenly align-items-center">
-            <div class="hedingemt m-3"><!--SCAN QR CODE--> SCAN QR CODE<span class="nhy"></span></div>
-            <div class="qrnewft">
-                <div class="qdrt m-3"><img src="https://www.easemytrip.com/images/common/footer/ftnovqrcode.png" alt="Scan QR"></div>
-
+          <div
+            class="logoqrmtwht d-flex flex-wrap flex-column justify-content-evenly align-items-center"
+          >
+            <div class="hedingemt m-3">
+              <!--SCAN QR CODE-->
+              SCAN QR CODE<span class="nhy"></span>
             </div>
-
-
-        </div>
+            <div class="qrnewft">
+              <div class="qdrt m-3">
+                <img
+                  src="https://www.easemytrip.com/images/common/footer/ftnovqrcode.png"
+                  alt="Scan QR"
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row pb-3">
-        <div class="novftlast ftnew d-flex flex-wrap justify-content-evenly align-items-center">
-          <div class="ndert ps-5">Copyright ©
-          <script type="text/javascript">document.write(new Date().getFullYear());</script> EaseMyTrip</div>
-          <div class="ndertimhgt"><img src="./public/images/logo-strip.png" alt="IATA Code"></div>
-  
-      </div>
+        <div
+          class="novftlast ftnew d-flex flex-wrap"
+        >
+          <div class="ndert ps-3">
+            Copyright ©
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            EaseMyTrip
+          </div>
+          <div class="ndertimhgt">
+            <img src="./public/images/logo-strip.png" alt="IATA Code" />
+          </div>
+        </div>
       </div>
     </footer>
 
@@ -1513,14 +1558,10 @@
           "_blank"
         );
       }
-      
-      function openCurrentPage() {
-        window.open(
-          "https://www.easemytrip.com/career.html",
-          "_blank"
-        );
-      }
 
+      function openCurrentPage() {
+        window.open("https://www.easemytrip.com/career.html", "_blank");
+      }
     </script>
   </body>
 </html>
