--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="nav d-flex justify-content-center align-items-center">
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/flights.html"
+              href="https://www.easemytrip.com/flights.html" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth flightmenuico"></span
@@ -58,7 +58,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/hotels/"
+              href="https://www.easemytrip.com/hotels/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth hotelmenuico"></span><span>Hotels</span>
@@ -66,7 +66,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://fph.easemytrip.com/"
+              href="https://fph.easemytrip.com/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth fphmenuico"></span
@@ -75,7 +75,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/railways/"
+              href="https://www.easemytrip.com/railways/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth trainmenuico"></span><span>Trains</span>
@@ -83,7 +83,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/bus/"
+              href="https://www.easemytrip.com/bus/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth busmenuico"></span><span>Bus</span>
@@ -91,7 +91,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/holidays/"
+              href="https://www.easemytrip.com/holidays/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth holidaymenuico"></span
@@ -100,7 +100,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/cabs/"
+              href="https://www.easemytrip.com/cabs/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth cabmenuico"></span><span>Cabs</span>
@@ -108,7 +108,7 @@
           </li>
           <li class="nav-item">
             <a
-              href="https://www.easemytrip.com/activities/"
+              href="https://www.easemytrip.com/activities/" target="_blank"
               class="_actvrmenu d-flex justify-content-center align-items-center"
             >
               <span class="meuicowidth actvitymenuico"></span
@@ -757,7 +757,7 @@
 
       <div class="row p-4 d-flex justify-content-center align-items-center">
         <a
-          href="https://www.easemytrip.com/deals.html"
+          href="https://www.easemytrip.com/deals.html" target="_blank"
           class="btn btn-primary rounded-pill mx-4"
           >View All Offers</a
         >
@@ -1182,7 +1182,7 @@
       </div>
       <div class="row d-flex justify-content-center my-4">
         <a
-          href="#"
+          href="https://www.easemytrip.com/blog/" target="_blank"
           class="btn btn-primary rounded-pill active mb-5"
           aria-current="page"
           >View All</a
@@ -2761,7 +2761,7 @@
         <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12">
           <div class="mx-3">
             <img class="ps-5" src="./public/images/EMTLogo_white.png" alt="" />
-            <p class="pt-2 ps-3">
+            <p class="pt-2 px-3">
               EaseMyTrip offers 'End to End' travel solutions including air
               tickets for more than 400 international and domestic airlines, hotel
               bookings for nearly 1 million hotels in India and abroad, cab
